--- a/otp.html
+++ b/otp.html
@@ -22,7 +22,7 @@
     <div class="container">
       <h2>OPT Generator</h2>
 
-      <div class="otp">
+      <div id="otp">
         <img
           src="https://i.postimg.cc/m2C6d1yn/password.png"
           alt="otp logo"
